# audiomixer_app

./: Cargo.toml  rustfmt.toml
src/: app.rs  main.rs  utils.rs
src/components/: slider.rs
src/pages/: loading.rs  main.rs  mod.rs
src/utils/: mod.rs  serial.rs
