[package]
name = "audiomixer_app"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.2"
freya = { git = "https://github.com/marc2332/freya/", branch = "a-new-begining", version = "0.4.0" }
freya-radio = { git = "https://github.com/marc2332/freya/", branch = "a-new-begining", version = "0.4.0" }
freya-router = { git = "https://github.com/marc2332/freya/", branch = "a-new-begining", version = "0.4.0" }
serialport = "4.8.1"
