[package]
name = "audiomixer_app"
version = "0.1.0"
edition = "2024"

[dependencies]
freya = { git = "https://github.com/marc2332/freya/", branch = "a-new-begining" }
freya-radio = { git = "https://github.com/marc2332/freya/", branch = "a-new-begining" }
freya-router = { git = "https://github.com/marc2332/freya/", branch = "a-new-begining" }
futures = "0.3.31"
futures-channel = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.147"
serialport = "4.8.1"
smol = "2.0.2"
