[package]
name = "audiomixer_app2"
version = "0.1.0"
edition = "2024"

[dependencies]
freya-router = { git = "https://github.com/marc2332/freya/", version = "0.4.0-rc.2" }
freya = { git = "https://github.com/marc2332/freya/", version = "0.4.0-rc.2", features = [
    "radio",
    "router",
    "tray",
] }
futures-channel = "0.3.31"
futures-lite = "2.6.1"
serialport = "4.8.1"
serde = "1.0.228"
serde_json = "1.0.149"
smol = "2.0.2"
pipewire = "0.9.2"
